[tool.poetry]
name = "flake8-markdown"
version = "0.5.0"
description = "Lints Python code blocks in Markdown files using flake8"
authors = ["John Franey <johnfraney@gmail.com>"]
repository = "https://github.com/johnfraney/flake8-markdown"
homepage = "https://github.com/johnfraney/flake8-markdown"
license = "MIT"
readme = "README.md"
keywords = ["flake8", "markdown", "lint"]
classifiers = [
    "Environment :: Console",
    "Framework :: Flake8",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.8"
flake8 = ">=5.0.0"

[tool.poetry.dev-dependencies]
pytest = ">7.0"

[tool.poetry.scripts]
flake8-markdown = 'flake8_markdown:main'

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"
